Fix #1730: add featured explorations to gallery categories page. Also fix gallery tile display on mobile view, and ensure that the autofocus on the 'create exploration' modal actually happens.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -918,6 +918,11 @@ textarea {
   }
 }
 
+.oppia-gallery-featured-explorations-separator {
+  border-top: 1px solid #aad;
+  margin: 40px 20% 10px;
+}
+
 .oppia-gallery-loading-results-message {
   background-color: #888;
   bottom: 0;
